# anfw-automate

./: .cdk.json  .commitlintrc.json  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmessage  .prettierignore  .prettierrc  .releaserc.json  CHANGELOG.md  COMMIT_STANDARDS.md  CONFIGURATION_MIGRATION.md  DEVELOPMENT.md  GLOSSARY.md  Makefile  Makefile.bak  Makefile.bak2  README.md  YARN_MIGRATION.md  bandit.yaml  cdk.context.json  cdk.json  docker-compose.local.yml  eslint.config.js  package-lock.json  package.json  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  commit-standards.yml  release.yml
.husky/: commit-msg  pre-commit  pre-push
app/: Makefile  NOTICE  README.md  cdk.context.json  cdk.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
app/RuleCollect/: collect_lambda.py  event_handler.py  schema.json
app/RuleExecute/: execute_lambda.py  firewall_handler.py
app/conf/: dev.json  sample.json  schema.json
app/conf/schemas/: stackset-bkp.json
app/data/: defaultdeny.yaml  protocols.yaml
app/lib/: app_pipeline_stack.ts  app_stages.ts  lambda_stack.ts  log_handler.py  rule_config.py  serverless_stack.ts  stackset_stack.ts  stackset_stage.ts
app/scripts/: package.sh
app/src/: NOTICE  pyproject.toml  pytest.ini  test-results.xml
app/src/RuleCollect/: collect_lambda.py  schema.json
app/src/RuleExecute/: execute_lambda.py  firewall_handler.py
app/src/data/: global_rules.yaml  protocols.yaml
app/src/lib/: rule_config.py
app/src/tests/: defaultdeny.yaml  test_log_handler.py
app/src/tests/sample_events/: s3put.json  sample-s3-update-event.json  sample-vpc-delete-event.json  sqs-event.json  sqs-fifo-event.json  us-east-1-config.yaml
app/templates/: monitoring-stack.yaml  samplescaledapp.yaml  spoke-serverless-stack.yaml
app/test/: NOTICE  app.test.ts  defaultdeny.yaml  fixtures.py  lt-samplescaledapp.yaml  pyproject.toml  test_FirewallHandler.py  test_collect_lambda.py  test_execute_lambda.py  test_ruleconfig.py
app/test/sample_events/: (AWS-Region)-config.yaml  eu-west-1-config.yaml  s3put.json  sample-rule-group.json  sample-vpc-delete-event.json
app/tests/: test_clambda.py  test_collect_lambda.py  test_collect_lambda_wip.py  test_event_handler.py  test_event_handler_org.py  test_firewall_handler.py  test_log_handler.py  test_ruleconfig.py  test_ruleconfig_wip.py
app/tests/sample_events/: sample-s3-update-event.json  sqs-event.json
conf/: dev.json  sample.json  schema.json
conf/dev/: app.json  firewall.json  global.json  stackset.json
conf/sample/: app.json  firewall.json  stackset.json
conf/schemas/: app.json  firewall.json  global.json  stackset.json  vpc.json
conf/test/: global.json
docs/: COMMANDS.md  COMMIT_STANDARDS.md  DEVELOPMENT.md  SECURITY_SCANNING.md  SEMANTIC_VERSIONING.md  YARN_MIGRATION.md
firewall/: Makefile  README.md  cdk.context.json  cdk.json  package-lock.json  package.json
firewall/conf/: dev.json  sample.json  schema.json
firewall/conf/dev/: vpc.json
firewall/lambda/delete_routes/: NOTICE  pyproject.toml
firewall/lambda/fetch_vpc_endpoints/: NOTICE  pyproject.toml
firewall/lib/: base_routing_stack.ts  firewall-stack.ts  firewall_pipeline_stack.ts  firewall_stack.ts  firewall_stages.ts  routing_stack.ts
firewall/policy/: DEFAULT_ACTION_ORDER.json  STRICT_ORDER.json
firewall/test/: firewall.test.ts
lambda/delete_routes/: NOTICE  delete_routes.py  pyproject.toml
lambda/fetch_vpc_endpoints/: NOTICE  fetch_vpc_endpoints.py  pyproject.toml
lib/app/: app_pipeline_stack.ts  app_stages.ts  lambda_stack.ts  serverless_stack.ts  stackset_stack.ts  stackset_stage.ts
lib/firewall/: firewall_pipeline_stack.ts  firewall_stack.ts  firewall_stages.ts
lib/vpc/: vpc_pipeline_stack.ts  vpc_stack.ts  vpc_stages.ts
policy/: action_order.json  json.json  strict_order.json
scripts/: build.sh  changelog-generator.js  commit-validator.js  commit-validator.test.js  commit.js  integration-test.sh  local-dev-setup.sh  pre-synth-script.sh  security-scan.sh  setup-commit-standards.sh  setup-git-template.js  sync-versions.js  update-packages.sh
shared/: Makefile  README.md  jest.config.js  package-lock.json  package.json
shared/examples/: README.md  enhanced-config-example.ts  enhanced-stack-demo.ts  module-config-demo.ts
shared/lib/: config_loader.ts  index.ts  tagged_stack.ts  validate.ts
shared/scripts/: build.sh  update-packages.sh
shared/test/: config_loader.test.ts  cross-module-property.test.ts  enhanced-config-migration-integration.test.ts  module-config-integration.test.ts  setup.ts  shared.test.ts
src/tests/sample_events/: sample-vpc-delete-event.json  sqs-fifo-event.json
templates/: spoke-serverless-stack.yaml
tests/integration/: README.md  conftest.py  requirements.txt  test_app_lambdas.py  test_firewall_resources.py  test_vpc_resources.py
vpc/: Makefile  README.md  cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
vpc/conf/: sample.json  schema.json
vpc/conf/sample/: firewall.json
vpc/conf/schemas/: vpc-bkp.json
vpc/lib/: vpc-stack.ts  vpc_pipeline_stack.ts  vpc_stack.ts  vpc_stages.ts
vpc/test/: vpc.test.ts
