[tool.poetry]
description = "Lambda Functions for automate rule management in AWS Network Firewall"
name = "app"
version = "2.0.0"
authors = ["Ajinkya Patil <ajupatil@amazon.com>","Stephan Traub <traubst@amazon.com>"]

[tool.poetry.dependencies]
aws-lambda-powertools = "^2.25.1"
aws-xray-sdk = "^2.12.0"
jsonschema = "^4.19.1"
python = "^3.11"
pyyaml = "^6.0.1"
requests = "^2.31.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
bandit = "^1.7.7"
pip-audit = "^2.7.2"
pip-licenses = "^4.3.4"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.34.52"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
