[tool.poetry]
description = "Lambda Functions for automate rule management in AWS Network Firewall"
name = "app"
version = "2.0.2"
authors = ["Ajinkya Patil <ajupatil@amazon.com>","Stephan Traub <traubst@amazon.com>"]
package-mode = false

[tool.poetry.dependencies]
aws-lambda-powertools = "^2.43.1"
aws-xray-sdk = "^2.15.0"
jsonschema = "^4.25.1"
python = "^3.11"
pyyaml = "^6.0.3"
requests = "^2.32.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
bandit = "^1.9.2"
pip-audit = "^2.10.0"
pip-licenses = "^4.5.1"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.42.15"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
