[tool.poetry]
description = "Lambda function to delete all routes for VPC before adding new routes"
name = "delete-routes"
packages = [{include = "delete_routes"}]
authors = ["Ajinkya Patil <ajupatil@amazon.com>","Stephan Traub <traubst@amazon.de>"]
version = "0.1.10"

[tool.poetry.dependencies]
bandit = "^1.7.5"
cfnresponse = "^1.1.2"
pip-audit = "^2.6.1"
pip-licenses = "^4.3.3"
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pip-licenses = "^4.3.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
