[tool.poetry]
description = "Lambda function to delete all routes for VPC before adding new routes"
name = "delete-routes"
authors = ["Ajinkya Patil <ajupatil@amazon.com>","Stephan Traub <traubst@amazon.de>"]
version = "0.1.15"

[tool.poetry.dependencies]
cfnresponse = "^1.1.2"
python = "^3.11"

[tool.poetry.group.test.dependencies]
bandit = "^1.7.7"
pip-audit = "^2.7.2"
pip-licenses = "^4.3.4"
pytest = "^8.0.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
