[tool.poetry]
description = "Lambda function to delete all routes for VPC before adding new routes"
name = "delete-routes"
authors = ["Ajinkya Patil <ajupatil@amazon.com>","Stephan Traub <traubst@amazon.de>"]
version = "1.0.18"
package-mode = false

[tool.poetry.dependencies]
cfnresponse = "^1.1.5"
python = "^3.11"

[tool.poetry.group.test.dependencies]
bandit = "^1.9.2"
pip-audit = "^2.10.0"
pip-licenses = "^4.5.1"
pytest = "^8.4.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
